--- a/app/globals.css
+++ b/app/globals.css
@@ -31,3 +31,12 @@ body {
     text-wrap: balance;
   }
 }
+
+.backface-hidden {
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
